--- a/src/main/features/ccj/views/repayment-plan-summary.njk
+++ b/src/main/features/ccj/views/repayment-plan-summary.njk
@@ -6,7 +6,7 @@
 
 
 {% macro paymentIntentionFragment(amount, payBySetDate) %}
-{{ t('The defendant will pay {{ amount }} by {{ paymentDate }}.', { amount: amount | numeral, paymentDate: payBySetDate | date }) }}
+<p>{{ t('The defendant will pay {{ amount }} by {{ paymentDate }}.', { amount: amount | numeral, paymentDate: payBySetDate | date }) }}<p>
 {% endmacro %}
 
 
@@ -15,12 +15,10 @@
 <div class="grid-row">
   <div class="column-two-thirds">
 
-    {% if paymentOption === domain.PaymentOption.INSTALMENTS %}
-      {{ repaymentPlanBlock( heading = 'The repayment plan', repaymentPlan = repaymentPlan ) }}
-
-    {% elseif paymentOption === domain.PaymentOption.BY_SPECIFIED_DATE or paymentOption === domain.PaymentOption.IMMEDIATELY %}
-      <h2 class="heading-medium">{{ t(heading) }}</h2>
-      {{paymentIntentionFragment( amount = remainingAmountToPay, payBySetDate = payBySetDate ) }}
+    {% if paymentIntention.paymentOption === domain.PaymentOption.INSTALMENTS %}
+      {{ repaymentPlanBlock( heading = 'The repayment plan', repaymentPlan = paymentIntention.repaymentPlan ) }}
+    {% elseif paymentIntention.paymentOption === domain.PaymentOption.BY_SPECIFIED_DATE or paymentIntention.paymentOption === domain.PaymentOption.IMMEDIATELY %}
+      {{paymentIntentionFragment( amount = remainingAmountToPay, payBySetDate = paymentIntention.paymentDate ) }}
     {% endif %}
 
     {% if claim.isEligibleForReDetermination() %}
