--- a/src/main/features/ccj/views/redetermination.njk
+++ b/src/main/features/ccj/views/redetermination.njk
@@ -12,36 +12,36 @@
 {% from "paymentPlanTable.njk" import paymentPlanTable %}
 
 {% block content %}
-<div class="column-two-thirds">
+<div class="grid-row">
+  <div class="column-two-thirds">
+    <form method="post">
+      {{ csrfProtection(csrf) }}
 
-  <form method="post">
-    {{ csrfProtection(csrf) }}
-
-    {% if madeBy === MadeBy.DEFENDANT.value %}
-      {% if paymentIntention.paymentOption === domain.PaymentOption.INSTALMENTS %}
-          <p> {{ t(topMessage)}}</p>
+      {% if madeBy === MadeBy.DEFENDANT.value %}
+        {% if paymentIntention.paymentOption === domain.PaymentOption.INSTALMENTS %}
+          <p>{{ t(topMessage)}}</p>
           {{ paymentPlanTable(
-          id = 'payment-table',
-          instalmentAmount = paymentIntention.repaymentPlan.instalmentAmount,
-          paymentSchedule = paymentIntention.repaymentPlan.paymentSchedule,
-          firstPaymentDate = paymentIntention.repaymentPlan.firstPaymentDate,
-          completionDate = paymentIntention.repaymentPlan.completionDate,
-          paymentLength = paymentIntention.repaymentPlan.paymentLength
+            id = 'payment-table',
+            instalmentAmount = paymentIntention.repaymentPlan.instalmentAmount,
+            paymentSchedule = paymentIntention.repaymentPlan.paymentSchedule,
+            firstPaymentDate = paymentIntention.repaymentPlan.firstPaymentDate,
+            completionDate = paymentIntention.repaymentPlan.completionDate,
+            paymentLength = paymentIntention.repaymentPlan.paymentLength
           )
           }}
-      {% elseif paymentIntention.paymentOption === domain.PaymentOption.BY_SPECIFIED_DATE or paymentIntention.paymentOption === domain.PaymentOption.IMMEDIATELY %}
+        {% elseif paymentIntention.paymentOption === domain.PaymentOption.BY_SPECIFIED_DATE or paymentIntention.paymentOption === domain.PaymentOption.IMMEDIATELY %}
           <p>{{ t('The defendant will pay {{ amount }} by {{ paymentDate }}.', { amount: remainingAmountToPay | numeral, paymentDate: paymentIntention.paymentDate | date }) }}<p>
+        {% endif %}
       {% endif %}
-    {% endif %}
 
-    {{ textArea(label = textAreaLabel, name = 'text', form = form, rows = 5, columns=18) }}
+      {{ textArea(label = textAreaLabel, name = 'text', form = form, rows = 5, columns=18) }}
 
-    {% if madeBy === MadeBy.CLAIMANT.value  %}
-    {{ saveAndContinueButton() }}
-    {% else %}
-    {{ submitButton(label = heading, id = 'saveAndContinue') }}
-    {% endif %}
-  </form>
-
+      {% if madeBy === MadeBy.CLAIMANT.value  %}
+        {{ saveAndContinueButton() }}
+      {% else %}
+        {{ submitButton(label = heading, id = 'saveAndContinue') }}
+      {% endif %}
+    </form>
+  </div>
 </div>
 {% endblock %}
