--- a/src/main/features/ccj/views/redetermination.njk
+++ b/src/main/features/ccj/views/redetermination.njk
@@ -4,30 +4,44 @@
 {% set heading = 'Why do you believe the defendant can repay you sooner?' %}
 {% else %}
 {% set heading = 'Ask a judge to make a repayment plan' %}
+{% set topMessage = 'The claimant has proposed this repayment plan:' %}
 {% set textAreaLabel = 'Why do you feel this plan is not affordable?' %}
 {% endif %}
 
 {% from "form.njk" import saveAndContinueButton, submitButton, csrfProtection, errorSummary, textArea %}
-{% from "repaymentPlanBlock.njk" import repaymentPlanBlock %}
+{% from "paymentPlanTable.njk" import paymentPlanTable %}
 
 {% block content %}
-<div class="column-two-thirds">
+<div class="grid-row">
+  <div class="column-two-thirds">
+    <form method="post">
+      {{ csrfProtection(csrf) }}
 
-  <form method="post">
-    {{ csrfProtection(csrf) }}
+      {% if madeBy === MadeBy.DEFENDANT.value %}
+        {% if paymentIntention.paymentOption === domain.PaymentOption.INSTALMENTS %}
+          <p>{{ t(topMessage)}}</p>
+          {{ paymentPlanTable(
+            id = 'payment-table',
+            instalmentAmount = paymentIntention.repaymentPlan.instalmentAmount,
+            paymentSchedule = paymentIntention.repaymentPlan.paymentSchedule,
+            firstPaymentDate = paymentIntention.repaymentPlan.firstPaymentDate,
+            completionDate = paymentIntention.repaymentPlan.completionDate,
+            paymentLength = paymentIntention.repaymentPlan.paymentLength
+          )
+          }}
+        {% elseif paymentIntention.paymentOption === domain.PaymentOption.BY_SPECIFIED_DATE or paymentIntention.paymentOption === domain.PaymentOption.IMMEDIATELY %}
+          <p>{{ t('The defendant will pay {{ amount }} by {{ paymentDate }}.', { amount: remainingAmountToPay | numeral, paymentDate: paymentIntention.paymentDate | date }) }}<p>
+        {% endif %}
+      {% endif %}
 
-    {% if madeBy === MadeBy.DEFENDANT.value %}
-    {{ repaymentPlanBlock( heading = 'The claimant has proposed this repayment plan', repaymentPlan = repaymentPlan ) }}
-    {% endif %}
+      {{ textArea(label = textAreaLabel, name = 'text', form = form, rows = 5, columns=18) }}
 
-    {{ textArea(label = textAreaLabel, name = 'text', form = form, rows = 5, columns=18) }}
-
-    {% if madeBy === MadeBy.CLAIMANT.value  %}
-    {{ saveAndContinueButton() }}
-    {% else %}
-    {{ submitButton(label = heading, id = 'saveAndContinue') }}
-    {% endif %}
-  </form>
-
+      {% if madeBy === MadeBy.CLAIMANT.value  %}
+        {{ saveAndContinueButton() }}
+      {% else %}
+        {{ submitButton(label = heading, id = 'saveAndContinue') }}
+      {% endif %}
+    </form>
+  </div>
 </div>
 {% endblock %}
