--- a/src/main/features/dashboard/views/macro/claimStatus/settlementAgreementClaimant.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/settlementAgreementClaimant.njk
@@ -14,6 +14,10 @@
   {{ t('You’ve both signed a settlement agreement') }}
 {% endmacro %}
 
+{% macro settlementAgreementRejectedForClaimantDashboard(claim) %}
+  {{ t('The defendant has rejected your settlement agreement. You can request a County Court Judgment against them') }}
+{% endmacro %}
+
 {% macro settlementAgreementSignedByClaimantClaimDetails(claim) %}
   {% set defendantName = claim.claimData.defendant.name %}
   <div class="status-block">
@@ -60,6 +64,15 @@
     <p>{{ t('When you’ve been paid in full, you need to let us know.') }}</p>
     <a href="{{ AppPaths.contactUsPage.uri }}" class="button button-secondary form-group">Tell us you've been paid</a>
   </div>
+{% endmacro %}
+
+{% macro settlementAgreementRejectedClaimantClaimDetails(claim) %}
+    <h2 class="heading-small">{{ t('The defendant has rejected your settlement agreement') }}</h2>
+    <p>{{ t('You can request a County Court Judgment (CCJ) against them based on the repayment plan shown in the agreement.') }}</p>
+    <p>{{ t('The court will make an order requiring them to pay the money. It does not guarantee that they pay
+      it.') }}</p>
+    <p>{{ t('{{ defendantName }} can still sign the settlement agreement until you request a CCJ.', { defendantName: claim.claimData.defendant.name }) }}</p>
+    {{ submitButton('Request a County Court Judgment (CCJ)') }}
 {% endmacro %}
 
 {% macro requestCCJ(claim) %}
