--- a/src/main/features/dashboard/views/macro/caseStatus.njk
+++ b/src/main/features/dashboard/views/macro/caseStatus.njk
@@ -47,7 +47,9 @@
 {% from "./claimStatus/settlementAgreementClaimant.njk" import
   settlementAgreementSignedByClaimantDashboard,
   settlementAgreementSignedByClaimantDeadlinePassedDashboard,
-  settlementAgreementSignedByBothClaimantDashboard %}
+  settlementAgreementSignedByBothClaimantDashboard,
+  settlementAgreementRejectedForClaimantDashboard
+%}
 
 {% from "./claimStatus/offerSettlement.njk" import offerSettlementReachedDashboard %}
 
@@ -55,7 +57,8 @@
 {% from "./claimStatus/admissionByCCJDefendant.njk" import admissionByCCJDefendantDashboard %}
 {% from "./claimStatus/settlementAgreementDefendant.njk" import
   settlementAgreementSignedByClaimantDefendantDashboard,
-  settlementAgreementSignedByBothDefendantDashboard %}
+  settlementAgreementSignedByBothDefendantDashboard,
+  settlementAgreementRejectedForDefendantDashboard %}
 {% from "./claimStatus/claimantResponse.njk" import claimantRejectedDefendantAsCompanyOrOrganisationResponse %}
 
 {% macro caseStatusForClaimant(status, claim) %}
@@ -106,6 +109,8 @@
     {{ offerSettlementReachedDashboard() }}
   {% elif status === ClaimStatus.CLAIMANT_REJECTED_DEFENDANT_AS_COMPANY_OR_ORGANISATION_RESPONSE %}
     {{ claimantRejectedDefendantAsCompanyOrOrganisationResponse() }}
+  {% elif status === ClaimStatus.SETTLEMENT_AGREEMENT_REJECTED %}
+    {{ settlementAgreementRejectedForClaimantDashboard(claim) }}
   {% endif %}
 {% endmacro %}
 
@@ -154,5 +159,7 @@
     {% elif status === ClaimStatus.OFFER_SETTLEMENT_REACHED
       or status === ClaimStatus.ELIGIBLE_FOR_CCJ_AFTER_BREACHED_SETTLEMENT %}
     {{ offerSettlementReachedDashboard() }}
+    {% elif status === ClaimStatus.SETTLEMENT_AGREEMENT_REJECTED %}
+      {{ settlementAgreementRejectedForDefendantDashboard() }}
   {% endif %}
 {% endmacro %}
