--- a/src/main/features/dashboard/views/macro/claimStatus/settlementAgreementDefendant.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/settlementAgreementDefendant.njk
@@ -10,6 +10,10 @@
   {{ t('You’ve both signed a settlement agreement') }}
 {% endmacro %}
 
+{% macro settlementAgreementRejectedForDefendantDashboard(claim) %}
+  {{ t('You rejected the settlement agreement') }}
+{% endmacro %}
+
 {% macro settlementAgreementSignedByClaimantDefendantClaimDetails(claim) %}
   <div class="status-block">
     <h2 class="heading-small">{{ t('{{ claimantName }} asked you to sign a settlement agreement', { claimantName: claim.claimData.claimant.name }) }}</h2>
@@ -61,7 +65,21 @@
     <p>{{ t('They asked you to sign a settlement agreement to formalise the plan.') }}</p>
     <p>{{ t('If you sign the agreement, they can’t request a County Court Judgment against you unless you break the terms.') }}</p>
     <p>{{ t('If you don’t sign or respond by {{ deadline }} they can request a County Court Judgment against you.', deadline = claim.claimantRespondedAt | addDays(7) | date) }}</p>
-    <p>{{ internalLink('View the repayment plan', CCJPaths.repaymentPlanSummaryPage.evaluateUri({ externalId: claim.externalId, madeBy: MadeBy.DEFENDANT.value })) }}</p>
+    <p>{{ internalLink('View the repayment plan', SettlementAgreementPaths.signSettlementAgreement.evaluateUri({ externalId: claim.externalId })) }} </p>
+        <!--CCJPaths.repaymentPlanSummaryPage.evaluateUri({ externalId: claim.externalId, madeBy: MadeBy.CLAIMANT.value })) }}</p>-->
     <p>{{ downloadResponseLink(claim) }}</p>
   </div>
 {% endmacro %}
+
+{% macro settlementAgreementRejectedDefendantClaimDetails(claim) %}
+  <div class="status-block">
+    <h2 class="heading-small">{{ t('You rejected the settlement agreement') }}</h2>
+    <p>{{ t('The claimant can request a County Court Judgment (CCJ) against you.') }}</p>
+    <p>{{ t('A CCJ would order you to repay the money in line with the terms of the agreement.') }}</p>
+    <p>{{ t('If they request a CCJ, you can ask a judge to consider changing the repayment plan, based on your financial details.') }}</p>
+    <p>{{ t('The court has reviewed the plan and believes you can afford it, so a judge may not change it.') }}</p>
+    <p>{{ t('We’ll email you when the claimant responds.')}}</p>
+    <p>{{ downloadResponseLink(claim) }}</p>
+  </div>
+{% endmacro %}
+
