--- a/src/main/features/dashboard/views/macro/caseHistory.njk
+++ b/src/main/features/dashboard/views/macro/caseHistory.njk
@@ -120,7 +120,7 @@ claimantRejectedDefendantAsCompanyOrOrganisationResponseDetailedStatus %}
       {% elif state.status === ClaimStatus.ELIGIBLE_FOR_CCJ_AFTER_BREACHED_SETTLEMENT %}
         {{ requestCCJ(claim) }}
       {% elif state.status === ClaimStatus.SETTLEMENT_AGREEMENT_REJECTED %}
-        {{ settlementAgreementRejectedClaimantClaimDetails(claim) }}
+        {{ settlementAgreementRejectedClaimantClaimDetails(claim, csrf) }}
       {% endif %}
   {% endfor %}
 {% endmacro %}
