--- a/src/main/features/dashboard/views/macro/claimStatus/utilityMacros.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/utilityMacros.njk
@@ -8,7 +8,7 @@
 
 {% macro signAgreementLink(claim, text = 'Sign the settlement agreement') %}
   {% if claim.settlement.isThroughAdmissions() %}
-    <a href="{{ OfferPaths.declarationPage.evaluateUri({ externalId: claim.externalId }) }}"
+    <a href="{{ SettlementAgreementPaths.signSettlementAgreement.evaluateUri({ externalId: claim.externalId }) }}"
        class="button button-secondary">{{ t(text) }}</a>
   {% else %}
     <a href="{{ OfferPaths.countersignAgreementPage.evaluateUri({ externalId: claim.externalId }) }}"
