--- a/src/main/features/ccj/views/repayment-plan-summary.njk
+++ b/src/main/features/ccj/views/repayment-plan-summary.njk
@@ -1,6 +1,6 @@
 {% extends "layout.njk" %}
 {% from "internalLink.njk" import internalLink %}
-{% from "form.njk" import submitButton %}
+{% from "form.njk" import csrfProtection, submitButton %}
 {% from "paymentPlanTable.njk" import paymentPlanTable %}
 
 {% if requestedBy === MadeBy.DEFENDANT.value %}
@@ -32,6 +32,16 @@
 
     {% if claim.isEligibleForReDetermination() %}
       <p>{{ t(bottomMessage) }}{{ internalLink('ask a judge to make a new repayment plan.', CCJPaths.redeterminationPage.evaluateUri({ externalId: claim.externalId, madeBy: requestedBy })) }}</p>
+    {% endif %}
+
+    {% if claim.status === ClaimStatus.CLAIMANT_ACCEPTED_COURT_PLAN_SETTLEMENT %}
+      <p>The claimant signed a settlement agreement based on their plan. You can choose to sign the agreement or not.</p>
+
+      <form novalidate method="post">
+        {{ csrfProtection(csrf) }}
+        {{ submitButton('Respond to settlement agreement') }}
+      </form>
+      <p>If you do not respond, the claimant can request a County Court Judgment against you.
     {% endif %}
   </div>
 </div>
