--- a/src/main/features/dashboard/views/macro/claimStatus/paidInFullClaimant.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/paidInFullClaimant.njk
@@ -2,7 +2,7 @@
 
 {% macro paidInFullClaimantClaimDetails(externalId) %}
   <h2 class="heading-small">{{ t('Settling the claim') }}</h2>
-    <p>{{ t('If the defendant has paid you, ' + internalLink('you need to tell us', DashboardPaths.datePaidPage.evaluateUri({ externalId: externalId })) + '.') | safe }}</p>
+  <p>{{ t('If the defendant has paid you, ' + internalLink('you need to tell us', DashboardPaths.datePaidPage.evaluateUri({ externalId: externalId })) + '.') | safe }}</p>
 {% endmacro %}
 
 {% macro paidInFullClaimantButtonClaimDetails(claim, text='Tell us you’ve settled') %}
@@ -17,7 +17,7 @@
   {% endif %}
 {% endmacro %}
 
-{% macro paidInFullClaimantDashboard %}
+{% macro paidInFullClaimantDashboard() %}
   {{ t('This claim is settled.') }}
 {% endmacro %}
 
