--- a/src/main/features/dashboard/views/macro/claimStatus/redeterminationRequestedClaimant.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/redeterminationRequestedClaimant.njk
@@ -1,4 +1,4 @@
-{% macro redeterminationClaimantDashboard(claim) %}
+{% macro redeterminationClaimantDashboard() %}
   {{ t('Awaiting judge’s review.') }}
 {% endmacro %}
 
