--- a/src/main/features/dashboard/views/macro/caseStatus.njk
+++ b/src/main/features/dashboard/views/macro/caseStatus.njk
@@ -58,6 +58,9 @@
   settlementAgreementSignedByBothDefendantDashboard %}
 {% from "./claimStatus/claimantResponse.njk" import claimantRejectedDefendantAsCompanyOrOrganisationResponse %}
 
+{% from "./claimStatus/redeterminationRequestedDefendant.njk" import redeterminationDefendantDashboard %}
+{% from "./claimStatus/redeterminationRequestedClaimant.njk" import redeterminationClaimantDashboard %}
+
 {% macro caseStatusForClaimant(status, claim) %}
   {% if status === ClaimStatus.NO_RESPONSE %}
     {{ noResponseForClaimantDashboard() }}
@@ -67,6 +70,8 @@
     {{ ccjEligibleForClaimantDashboard() }}
   {% elif status === ClaimStatus.CCJ_REQUESTED %}
     {{ ccjRequestedForClaimantDashboard(claim) }}
+  {% elif status === ClaimStatus.REDETERMINATION_BY_JUDGE %}
+    {{ redeterminationClaimantDashboard() }}
   {% elif status === ClaimStatus.CLAIMANT_ACCEPTED_ADMISSION_AND_REQUESTED_CCJ or status === ClaimStatus.CLAIMANT_ALTERNATIVE_PLAN_WITH_CCJ %}
     {{ admissionByCCJClaimantDashboard(claim) }}
   {% elif status === ClaimStatus.ELIGIBLE_FOR_CCJ_AFTER_FULL_ADMIT_PAY_IMMEDIATELY_PAST_DEADLINE %}
@@ -116,6 +121,8 @@
       {{ moreTimeRequestedForDefendantDashboard(claim) }}
     {% elif status === ClaimStatus.ELIGIBLE_FOR_CCJ %}
       {{ ccjEligibleForDefendantDashboard(claim) }}
+    {% elif status === ClaimStatus.REDETERMINATION_BY_JUDGE %}
+      {{ redeterminationDefendantDashboard(claim) }}
     {% elif status === ClaimStatus.CCJ_REQUESTED %}
       {{ ccjRequestedForDefendantDashboard(claim) }}
     {% elif status === ClaimStatus.CLAIMANT_ACCEPTED_ADMISSION_AND_REQUESTED_CCJ or status === ClaimStatus.CLAIMANT_ALTERNATIVE_PLAN_WITH_CCJ %}
