--- a/src/main/features/dashboard/views/macro/claimStatus/partAdmitRejectionDefendant.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/partAdmitRejectionDefendant.njk
@@ -18,7 +18,7 @@
       <p>{{ t('You might have to go to a hearing. We’ll contact you if we set a hearing date to tell you how to prepare.') }}</p>
       <p>{{ t('You need to ' + internalLink('complete a directions questionnaire form ',
           DashboardPaths.directionsQuestionnairePage.evaluateUri({ externalId: claim.externalId })) + 'to tell us more about the claim.') | safe }}</p>
-      <p>{{ t('Your defence won’t proceed if you don’t complete and return the form before {{ responseDeadline }}.', { responseDeadline: claim.responseDeadline | date }) }}</p>
+      <p>{{ t('Your defence won’t proceed if you don’t complete and return the form before {{ responseDeadline }}.', { responseDeadline: claim.claimantRespondedAt | addDays(19) | date }) }}</p>
     {% endif %}
 
     <p>{{ downloadResponseLink(claim) }}</p>
