ROC-4399 reject part admit dashboards (#1175)

--- a/src/main/features/dashboard/views/macro/caseStatus.njk
+++ b/src/main/features/dashboard/views/macro/caseStatus.njk
@@ -61,6 +61,9 @@
 {% from "./claimStatus/redeterminationRequestedDefendant.njk" import redeterminationDefendantDashboard %}
 {% from "./claimStatus/redeterminationRequestedClaimant.njk" import redeterminationClaimantDashboard %}
 
+{% from "./claimStatus/partAdmitRejectionClaimant.njk" import partAdmitRejectedByClaimantDashboard %}
+{% from "./claimStatus/partAdmitRejectionDefendant.njk" import partAdmitRejectedByClaimantDefendantDashboard %}
+
 {% macro caseStatusForClaimant(status, claim) %}
   {% if status === ClaimStatus.NO_RESPONSE %}
     {{ noResponseForClaimantDashboard() }}
@@ -111,6 +114,8 @@
     {{ offerSettlementReachedDashboard() }}
   {% elif status === ClaimStatus.CLAIMANT_REJECTED_DEFENDANT_AS_COMPANY_OR_ORGANISATION_RESPONSE %}
     {{ claimantRejectedDefendantAsCompanyOrOrganisationResponse() }}
+  {% elif status === ClaimStatus.CLAIMANT_REJECTS_PART_ADMISSION %}
+    {{ partAdmitRejectedByClaimantDashboard(claim) }}
   {% endif %}
 {% endmacro %}
 
@@ -153,13 +158,15 @@
         {{ claimFullAdmissionForDefendantDashboard(claim) }}
       {% endif %}
     {% elif status === ClaimStatus.OFFER_SUBMITTED %}
-    {{ offerSubmittedForDefendantDashboard() }}
+      {{ offerSubmittedForDefendantDashboard() }}
     {% elif status === ClaimStatus.OFFER_REJECTED %}
-    {{ offerRejectedForDefendantDashboard() }}
+      {{ offerRejectedForDefendantDashboard() }}
     {% elif status === ClaimStatus.OFFER_ACCEPTED %}
-    {{ offerAcceptedForDefendantDashboard() }}
+      {{ offerAcceptedForDefendantDashboard() }}
+    {% elif status === ClaimStatus.CLAIMANT_REJECTS_PART_ADMISSION %}
+      {{ partAdmitRejectedByClaimantDefendantDashboard(claim) }}
     {% elif status === ClaimStatus.OFFER_SETTLEMENT_REACHED
       or status === ClaimStatus.ELIGIBLE_FOR_CCJ_AFTER_BREACHED_SETTLEMENT %}
-    {{ offerSettlementReachedDashboard() }}
+      {{ offerSettlementReachedDashboard() }}
   {% endif %}
 {% endmacro %}
