--- a/src/main/features/claimant-response/views/confirmation.njk
+++ b/src/main/features/claimant-response/views/confirmation.njk
@@ -10,7 +10,9 @@
     <div class="column-two-thirds">
       <div class="govuk-box-highlight">
         <h1 class="bold-large">
-          {% if repaymentPlanOrigin === 'DEFENDANT' %}
+          {% if claim.claimData.defendant.isBusiness() and claim.claimantResponse.claimantPaymentIntention %}
+            {{ t('You’ve proposed a different repayment plan') }}
+          {% elseif repaymentPlanOrigin === 'DEFENDANT' %}
             {{ t('You’ve accepted the repayment plan') }}
           {% elseif repaymentPlanOrigin === 'CLAIMANT' %}
             {{ t('You’ve proposed an alternative repayment plan') }}
@@ -34,7 +36,9 @@
       </div>
 
       <h2 class="heading-medium">{{ t('What happens next') }}</h2>
-      {% if claim.countyCourtJudgmentRequestedAt %}
+      {% if claim.claimData.defendant.isBusiness() and claim.claimantResponse.claimantPaymentIntention %}
+        {% include "./confirmation/proposed-alternate-payment-plan-to-business-defendant.njk" %}
+      {% elseif claim.countyCourtJudgmentRequestedAt %}
         {% if paymentIntentionAccepted %}
           <p>{{ t('A County Court Judgment has been requested against the defendant.') }}</p>
           <p>{{ t('When we’ve processed your request we’ll post a copy of the judgment to you and to {{ defendantName }}.',
