Check for explanation before trying to show it

--- a/src/main/features/response/views/macro/check-and-send/admission.njk
+++ b/src/main/features/response/views/macro/check-and-send/admission.njk
@@ -55,7 +55,7 @@
     }}
   {% endif %}
 
-  {% if statementOfMeansIsApplicable %}
+  {% if statementOfMeansIsApplicable and explanation %}
     {{
       row(
         label = 'Why you can’t pay now',
