Move logic for if statement of means content should be displayed to controller

--- a/src/main/features/response/views/check-and-send.njk
+++ b/src/main/features/response/views/check-and-send.njk
@@ -285,7 +285,7 @@
       {{ tableEnd() }}
     {% endif %}
 
-    {% if statementOfMeansIsApplicable and draft.statementOfMeans and not draft.defendantDetails.partyDetails.isBusiness() %}
+    {% if statementOfMeansIsApplicable %}
       {% include "./statement-of-means/check-and-send.njk" %}
     {% endif %}
 
