--- a/src/main/features/claimant-response/views/confirmation.njk
+++ b/src/main/features/claimant-response/views/confirmation.njk
@@ -10,16 +10,14 @@
     <div class="column-two-thirds">
       <div class="govuk-box-highlight">
         <h1 class="bold-large">
-          {% if claim.claimantResponse.formaliseOption === FormaliseOption.REFER_TO_JUDGE %}
-          {{ t('You have requested free mediation') }}
+          {% if claim.countyCourtJudgmentRequestedAt or claim.claimantResponse.formaliseOption === FormaliseOption.REFER_TO_JUDGE %}
+          {{ t('County Court Judgment requested') }}
           {% elseif repaymentPlanOrigin === 'DEFENDANT' %}
             {{ t('You’ve accepted the repayment plan') }}
           {% elseif repaymentPlanOrigin === 'CLAIMANT' %}
             {{ t('You’ve proposed an alternative repayment plan') }}
           {% elseif repaymentPlanOrigin === 'COURT' %}
             {{ t('You’ve signed a settlement agreement') }}
-          {% elseif claim.countyCourtJudgmentRequestedAt %}
-            {{ t('County Court Judgment requested') }}
           {% elseif claim.claimantResponse.type === ClaimantResponseType.REJECTION %}
             {{ t('You’ve rejected their response') }}
           {% elseif claim.claimantResponse.type === ClaimantResponseType.ACCEPTATION %}
@@ -36,7 +34,16 @@
       </div>
 
       <h2 class="heading-medium">{{ t('What happens next') }}</h2>
-      {% if claim.countyCourtJudgmentRequestedAt %}
+      {% if claim.claimantResponse.formaliseOption !== FormaliseOption.REFER_TO_JUDGE %}
+          <p>{{ t(' You’ve requested a County Court Judgment against {{ defendantName }}.',
+              { defendantName: claim.claimData.defendant.name }) }}</p>
+          <p>{{ t('When we’ve processed your request we’ll post a copy of the judgment to you and to {{ defendantName }}.',
+              { defendantName: claim.claimData.defendant.name }) }}</p>
+          <p>{{ t('A judge will decide what {{ defendantName }} can afford to pay, based on their financial details.',
+              { defendantName: claim.claimData.defendant.name }) }}</p>
+          <p>{{ t('We’ll contact both you and {{ defendantName }} to tell you what to do next.',
+              { defendantName: claim.claimData.defendant.name }) }}</p>
+      {% elseif claim.countyCourtJudgmentRequestedAt %}
         {% if paymentIntentionAccepted %}
           <p>{{ t('A County Court Judgment has been requested against the defendant.') }}</p>
           <p>{{ t('When we’ve processed your request we’ll post a copy of the judgment to you and to {{ defendantName }}.',
@@ -50,8 +57,7 @@
         {% include "./confirmation/proposed-alternate-payment-plan.njk" %}
       {% elseif repaymentPlanOrigin === 'COURT' %}
         {% include "./confirmation/court-suggested-payment-plan.njk" %}
-      {% elseif claim.claimantResponse.type === ClaimantResponseType.ACCEPTATION and
-                claim.claimantResponse.formaliseOption !== FormaliseOption.REFER_TO_JUDGE %}
+      {% elseif claim.claimantResponse.type === ClaimantResponseType.ACCEPTATION %}
         <p>{{ t('The claim is now settled. We’ll email the defendant {{ claim.claimData.defendant.name }} to tell them.') }}</p>
       {% elseif claim.claimantResponse.freeMediation %}
         <p>{{ t('You agreed to try to resolve the claim using mediation.') }}</p>
